fix(dialog, css): set md-actions container to overflow:hidden.
Fixes #3135.

--- a/src/components/button/demoBasicUsage/style.css
+++ b/src/components/button/demoBasicUsage/style.css
@@ -21,3 +21,6 @@ section .md-button {
   opacity: 0.54;
 }
 
+.launch {
+  padding-top:12px;
+}
